Log message:	CSN: CSN-awb-3085

Fix to the Git wrapper in Awb. Following is the expected behavior now. 
If a specific revision of keiko is cloned/checked out using a commit tag 
$awb-shell clone package keiko/<commit-tag>
It will be checked out as a local asim-release branch. (this is imposed by the way git checks out a particular revision)

On that package if a pull/update is done then an error is thrown
awb-shell pull package keiko OR awb-shell update package keiko 
Package: Error - Branch asim-release does not exist in the remote repository.
You probably checked out a specific commit tag
Consider checking out master branch and then pull
awb-shell checkout package <name>/master
awb-shell pull package name
If you have local changes then consider merging with master

Also if a pull/update of master is done while asim-release is checked
out 
$awb-shell pull package keiko/master
Then just like native git, changes from remote master will be merged
into the asim-release branch. But asim-release will still be checked
out.

r3087
Author:	mgambhir
Last modification:	Rev 3087 - 2012-03-15 03:26:10
Log message:	CSN: CSN-awb-3087

- Changing the "View Cycle Display" analysis tool in AWB from 2Dreams to dreams till I
get 2Dreams to work

----------
emer        Date: Sat Apr  7 14:23:04 EDT 2012  CSN: CSN-awb-497
                  Sat Apr  7 18:23:04 UTC 2012


Directory libperl/AsimShell/lib/AsimShell
 Help.pm                   Locally Modified          496 
 Completion.pm             Locally Modified          496 
 Commands.pm               Locally Modified          496 

Directory libperl/AsimShell/lib
 AsimShell.pm              Locally Modified          496 

Directory tools/scripts
 awb-shell                 Locally Modified          496 

Added a 'source <file>' command to awb-shell that executes
each of the awb-shell commands in <file>.

Fixed display of alternatives when doing command completion
on a uniondir-based file.